[package]
name = "argone"
version = "0.5.2"
authors = [
    "just-do-halee <just.do.halee@gmail.com>"
    ]

homepage = "https://github.com/just-do-halee/argone"
repository = "https://github.com/just-do-halee/argone"
documentation = "https://docs.rs/argone"

description = "Most intuitive global cli maker. *(lazy_static + config-rs + clap)"

readme = "README.md"

include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE_*",
	"README.md"
]

keywords = [
    "cli",
    "argument",
    "config",
    "clap",
    "lazy_static"
    ]

categories = [
    "command-line-interface"
    ]

license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
config = "0.11"
clap = { version = "3.2.5", features = ["derive"] }

